@@ -13,10 +13,9 @@
     <sect3>
       <title>Backup original file</title>
 
-      <para>When this option is enabled backup copy of file is created every
-      time before saving the file. Filename for backup file is generated by
-      replacing filename extension with <filename
-      class="extension">BAK</filename>.</para>
+      <para>When this option is enabled backup copy is created before saving
+      the file. Filename for backup file is generated by replacing filename
+      extension with <filename class="extension">BAK</filename>.</para>
     </sect3>
 
     <sect3>
@@ -27,7 +26,7 @@
           different files or directories</member>
 
           <member>after opening files for compare first difference in files is
-          scrolled visible and selecteds</member>
+          scrolled visible and selected</member>
         </simplelist></para>
     </sect3>
 
@@ -216,15 +215,15 @@
     <sect3>
       <title>File compare method</title>
 
-      <para>File compare method has three choises:</para>
+      <para>File compare method has three choices:</para>
 
       <itemizedlist>
         <listitem>
           <para><guilabel>Full Contents</guilabel> - full comparison of files
           by content, with all the bells and whistles. This method invokes
           plugins and uses diffutils engine for fully accurate differencing
-          and moved block detectioin. This is the most complete and
-          recommended method.</para>
+          and moved block detection. This is the most complete and recommended
+          method.</para>
         </listitem>
 
         <listitem>
@@ -344,9 +343,9 @@ EOL differences.</screen>
 6361 6E20 6265 2068 616E 646C 696E 6720 0D0A
 454F 4C20 6469 6666 6572 656E 6365 732E</screen>
 
-      <para>The example presents one simplish text file with five lines of
-      text. All lines, except third, are terminated with DOS style EOL (0D0A).
-      Third line has Unix style EOL (0D).</para>
+      <para>The example presents one simple text file with five lines of text.
+      All lines, except third, are terminated with DOS style EOL (0D0A). Third
+      line has Unix style EOL (0D).</para>
 
       <para>If <guilabel>Preserve original EOL chars</guilabel>-option is not
       set WinMerge determines file is meant to be DOS style file and converts
@@ -379,12 +378,12 @@ EOL differences.</screen>
       <para>This option controls coloring of differences inside lines.
       Normally (<guilabel>Break at whitespace</guilabel> selected) finding
       differences stops at whitespace characters. This basically means whole
-      words are highlighted. </para>
+      words are highlighted.</para>
 
       <para>But if <guilabel>Break at whitespace or punctuation</guilabel> is
-      selected difference finding stops at punctuation charactes as well. When
-      this is selected WinMerge can better handle comma separated lists etc.
-      For example, for lines:</para>
+      selected difference finding stops at punctuation characters as well.
+      When this is selected WinMerge can better handle comma separated lists
+      etc. For example, for lines:</para>
 
       <para><screen>10,20,30,40,50</screen></para>
 
@@ -471,16 +470,16 @@ EOL differences.</screen>
     </sect3>
 
     <sect3>
-      <title>Detect archive support from file signature</title>
+      <title>Detect archive type from file signature</title>
 
       <para>Enabling this option allows WinMerge to recognize archive files
-      even if their file extension is not know archive type. Basically
-      WinMerge reads beginning of file and searches archive-specific signature
+      even if their file extension is not known. Basically WinMerge reads
+      beginning of the file and searches for archive-specific signature
       bytes.</para>
 
       <tip>
-        <para>This option allows WinMerge to recognize and for example Open
-        Office files.</para>
+        <para>Enabling this option allows WinMerge to recognize and for
+        example Open Office files.</para>
       </tip>
     </sect3>
   </sect2>
@@ -496,8 +495,8 @@ EOL differences.</screen>
       <title>Default codepage for ANSI files</title>
 
       <para>These three radiobuttons can be used to select default codepage
-      WinMerge uses when handling ANSI files. Usually default choise of
-      <guilabel>System codepage</guilabel> is best choise. However if user
+      WinMerge uses when handling ANSI files. Usually default choice of
+      <guilabel>System codepage</guilabel> is best choice. However if user
       knows that files are not in same codepage than system uses then user can
       choose different codepage selecting <guilabel>Custom codepage</guilabel>
       and typing codepage number to textbox next to it.</para>
@@ -511,7 +510,7 @@ EOL differences.</screen>
     </sect3>
 
     <sect3>
-      <title>Detect codepage info for these files: .html .rc</title>
+      <title>Detect codepage info for these files: .html .rc .xml</title>
 
       <important>
         <para>Uncheck this option in <filename>WinMerge.exe</filename>.
@@ -524,17 +523,18 @@ EOL differences.</screen>
       different from your current codepage (your current codepage is the
       codepage of your Windows configuration).</para>
 
-      <para>For example, you may merge two slovak or two japanese files in an
-      english environment. With the required fonts, and this option set, your
-      slovak, or japanese, files will be displayed with slovak, or japanese,
+      <para>For example, you may merge two Slovak or two Japanese files in an
+      English environment. With the required fonts, and this option set, your
+      Slovak, or Japanese, files will be displayed with Slovak, or Japanese,
       characters.</para>
 
       <para>Actually, WinMerge detects the codepage for these extensions :
-      <filename class="extension">.html</filename> and <filename
-      class="extension">.rc</filename> (resource files for VC++).</para>
+      <filename class="extension">.html</filename>, <filename
+      class="extension">.rc</filename> (resource files for VC++) and
+      .<filename>xml</filename>.</para>
 
       <para>WinMerge also detects a codepage difference between the left/right
-      files. To avoid lossy conversions during merge/copy/paste, WinMerges
+      files. To avoid lossy conversions during merge/copy/paste, WinMerge
       proposes you to ignore the codepage information.</para>
 
       <caution>
